# opencvDetection

./: .gitignore  CMakeLists.txt  README.md
lib/: CMakeLists.txt  IDetector.hpp  eyeDetection.hpp  faceDetection.hpp  personDetection.hpp  videoStream.hpp
main/: main.cpp
src/: CMakeLists.txt  eyeDetection.cpp  faceDetection.cpp  personDetection.cpp  videoStream.cpp
